--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcom</title>
     
-    <link rel="stylesheet" href="{{url_for('static' , filename='Welcom.css')}}">
+    <link rel="stylesheet" href="static/Welcom.css')}}">
 </head>
 <body>
 
