--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static' , filename='home.css')}}">
+    <link rel="stylesheet" type="text/css" href="static/home.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
@@ -205,6 +205,6 @@
             </div>
         </div>
     </div>
-    <script src="{{url_for('static' , filename='home.js')}}" defer></script>
+    <script src="static/home.js" defer></script>
 </body>
 </html>
