--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,6 @@
 
     </div> 
     </div>
-    <script src="{{url_for('static' , filename='Welcom.js')}}"></script>
+    <script src="static/Welcom.js"></script>
 </body>
 </html>
