--- a/templates/myDatabase.html
+++ b/templates/myDatabase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static' , filename ='myDatabase.css')}}">
+    <link rel="stylesheet" type="text/css" href="static/myDatabase.css">
     <title>DataBase</title>
 </head>
 <body>
@@ -37,5 +37,5 @@
         <button class="neu-button">OK</button>
     </div>
 </body>
-<script src="{{url_for ('static' , filename='myDatabase.js')}}" defer></script>
+<script src="static/myDatabase.js" defer></script>
 </html> 
